Update author information

--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,8 @@
     "authors": [
         {
             "name": "Dustin Wheeler",
-            "email": "mdwheele@ncsu.edu",
-            "homepage": "http://dustinwheeler.us",
+            "email": "mdwheele@gmail.com",
+            "homepage": "https://dustinwheeler.com",
             "role": "Developer"
         }
     ],
